--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -30,7 +30,6 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "import logging as lg\n",
     "\n",
     "from azure_utils.utilities import text_to_json, get_auth\n",
     "from azureml.core.model import Model\n",
@@ -125,7 +124,6 @@
    "source": [
     "%%writefile score.py\n",
     "\n",
-    "import pandas as pd\n",
     "import json\n",
     "import logging as lg\n",
     "import timeit as t\n",
@@ -159,11 +157,11 @@
     "        # Create a scoring dataframe.\n",
     "        test = self.questions.copy()\n",
     "        test[self.dup_col] = Text\n",
-    "        test_X = test[self.feature_cols]\n",
+    "        test_x = test[self.feature_cols]\n",
     "\n",
     "        # Score the text.\n",
     "        test[self.probabilities_col] = self.model.predict_proba(\n",
-    "            test_X)[:, 1]\n",
+    "            test_x)[:, 1]\n",
     "\n",
     "        # Order the data by descending probability.\n",
     "        test.sort_values(by=self.probabilities_col, ascending=False,\n",
@@ -176,6 +174,7 @@
     "        # Return the result.\n",
     "        return pairs\n",
     "\n",
+    "\n",
     "def init():\n",
     "    logger = lg.getLogger(\"scoring_script\")\n",
     "    global model\n",
@@ -184,8 +183,8 @@
     "    start = t.default_timer()\n",
     "    model = DuplicateModel(model_path, questions_path)\n",
     "    end = t.default_timer()\n",
-    "    loadTimeMsg = \"Model loading time: {0} ms\".format(round((end-start)*1000, 2))\n",
-    "    logger.info(loadTimeMsg)\n",
+    "    load_time_msg = \"Model loading time: {0} ms\".format(round((end-start)*1000, 2))\n",
+    "    logger.info(load_time_msg)\n",
     "\n",
     "\n",
     "def run(body):\n",
@@ -247,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, call the init() to initalize the model."
+    "Now, call the init() to initialize the model."
    ]
   },
   {
@@ -272,8 +271,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jsontext = text_to_json(text_to_score)\n",
-    "r = run(jsontext)\n",
+    "json_text = text_to_json(text_to_score)\n",
+    "r = run(json_text)\n",
     "r"
    ]
   },
