--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -30,6 +30,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import pandas as pd\n",
     "\n",
     "from azure_utils.utilities import text_to_json, get_auth\n",
     "from azureml.core.model import Model\n",
