--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -130,7 +130,7 @@
     "import timeit as t\n",
     "\n",
     "\n",
-    "import pandas as pd\n",
+    "import pandas\n",
     "from sklearn.externals import joblib\n",
     "\n",
     "\n",
@@ -148,7 +148,7 @@
     "        self.model_path = model_path\n",
     "        self.questions_path = questions_path\n",
     "        self.model = joblib.load(model_path)\n",
-    "        self.questions = pd.read_csv(questions_path, sep='\\t',\n",
+    "        self.questions = pandas.read_csv(questions_path, sep='\\t',\n",
     "                                     encoding='latin1')\n",
     "        self.questions = self.questions[self.questions_cols]\n",
     "        self.questions.columns = [\n",
