--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's retrive the model registered earlier and download it."
+    "Let's retrieve the model registered earlier and download it."
    ]
   },
   {
