--- a/notebooks/01_DataPrep.ipynb
+++ b/notebooks/01_DataPrep.ipynb
@@ -20,7 +20,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we use a subset of [Stack Exchange network](https://archive.org/details/stackexchange) question data which includes original questions tagged as 'JavaScript', their duplicate questions and their answers. Here, we provide the steps to prepare the data to use in model development for training a model that will match a new question with an existing original question. "
+    "In this notebook, we use a subset of [Stack Exchange network](https://archive.org/details/stackexchange) question data \n",
+    "which includes original questions tagged as 'JavaScript', their duplicate questions and their answers. Here, we provide \n",
+    "the steps to prepare the data to use in model development for training a model that will match a new question with an \n",
+    "existing original question. "
    ]
   },
   {
@@ -71,7 +74,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we download the questions, duplicate questions and answers and load the datasets into pandas dataframes using the helper functions."
+    "Next, we download the questions, duplicate questions and answers and load the datasets into pandas dataframes using \n",
+    "the helper functions."
    ]
   },
   {
@@ -103,7 +107,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now check the dataframes. Notice that questions and duplicates have \"AnswerID\" column that would help match with the index of answers dataframe."
+    "Let's now check the dataframes. Notice that questions and duplicates have \"AnswerID\" column that would help match \n",
+    "ith the index of answers dataframe."
    ]
   },
   {
@@ -178,14 +183,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers.at[questions.iloc[0,0],'Text0']"
+    "print(answers.at[questions.iloc[0, 0], 'Text0'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we use the helper functions to clean questions, duplicates and answers from unwanted text such as code, html tags and links. Notice that we add a new column 'Text' to each dataframe for clean text in lowercase."
+    "Next, we use the helper functions to clean questions, duplicates and answers from unwanted text such as code, html tags \n",
+    "and links. Notice that we add a new column 'Text' to each dataframe for clean text in lowercase."
    ]
   },
   {
@@ -224,7 +230,7 @@
    "outputs": [],
    "source": [
     "# Original question.\n",
-    "questions.iloc[0,1]"
+    "print(questions.iloc[0, 1])"
    ]
   },
   {
@@ -234,14 +240,15 @@
    "outputs": [],
    "source": [
     "# After cleaning.\n",
-    "questions.iloc[0,3]"
+    "print(questions.iloc[0, 3])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "it turns out that some duplicate questions were also in original questions. Also, some original questions and some duplicate questions were duplicated in the datasets. In the following, we remove them from the dataframes."
+    "It turns out that some duplicate questions were also in original questions. Also, some original questions and some \n",
+    "duplicate questions were duplicated in the datasets. In the following, we remove them from the dataframes."
    ]
   },
   {
@@ -294,7 +301,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below are some statistics on the data. Notice that some questions have very low number of duplicates while others may have a large number. "
+    "Below are some statistics on the data. Notice that some questions have very low number of duplicates while others may \n",
+    "have a large number. "
    ]
   },
   {
@@ -449,14 +457,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this part, we prepare train and test sets. For training a binary classification model, we will need to construct match and non-match pairs from duplicates and their questions. Finding matching pairs can be accomplished by joining each duplicate with its question. However, non-match examples need to be constructed randomly. "
+    "In this part, we prepare train and test sets. For training a binary classification model, we will need to construct \n",
+    "match and non-match pairs from duplicates and their questions. Finding matching pairs can be accomplished by joining \n",
+    "each duplicate with its question. However, non-match examples need to be constructed randomly. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a first step, to make sure we train and test the performance of the model on each question, we will need to have examples of match and non-match pairs for each question both in train and test sets. In order to achieve that, we split the duplicates in a stratified manner into train and test sets making sure at least 1 or more duplicates per question is in the test set depending on test_size parameter and number of duplicates per each question."
+    "As a first step, to make sure we train and test the performance of the model on each question, we will need to have \n",
+    "examples of match and non-match pairs for each question both in train and test sets. In order to achieve that, \n",
+    "we split the duplicates in a stratified manner into train and test sets making sure at least 1 or more duplicates per \n",
+    "question is in the test set depending on test_size parameter and number of duplicates per each question."
    ]
   },
   {
@@ -476,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert (dupes_test[label_column].unique().shape[0] == dupes[label_column].unique().shape[0])"
+    "assert dupes_test[label_column].unique().shape[0] == dupes[label_column].unique().shape[0]"
    ]
   },
   {
@@ -493,7 +506,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we pair each training duplicate in train set with its matching question and N-1 random questions using the helper function."
+    "Next, we pair each training duplicate in train set with its matching question and N-1 random questions using the helper \n",
+    "function."
    ]
   },
   {
@@ -680,7 +694,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now move on to [train on local](02_TrainOnLocal.ipynb) notebook to train our model using Azure Machine Learning."
+    "We can now move on to [train on local](02_TrainOnLocal.ipynb) notebook to train our model using Azure Machine \n",
+    "Learning."
    ]
   }
  ],
