--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -29,13 +29,14 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from azureml.core.workspace import Workspace\n",
+    "\n",
+    "from azure_utils.utilities import get_auth\n",
     "from azureml.core import Experiment\n",
-    "from azureml.core.runconfig import RunConfiguration\n",
     "from azureml.core import ScriptRunConfig\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from dotenv import set_key, get_key, find_dotenv\n",
-    "from azure_utils.utilities import get_auth"
+    "from azureml.core.runconfig import RunConfiguration\n",
+    "from azureml.core.workspace import Workspace\n",
+    "from dotenv import set_key, get_key, find_dotenv"
    ]
   },
   {
@@ -58,7 +59,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook uses a training script that uses [lightgbm](https://lightgbm.readthedocs.io/en/latest/Python-API.html#scikit-learn-api) . Here we set the number of estimators. "
+    "This notebook uses a training script that uses \n",
+    "[lightgbm](https://lightgbm.readthedocs.io/en/latest/Python-API.html#scikit-learn-api). \n",
+    "Here we set the number of estimators. "
    ]
   },
   {
@@ -99,7 +102,8 @@
    "metadata": {},
    "source": [
     "## Create An Experiment\n",
-    "**Experiment** is a logical container in an Azure ML Workspace. It hosts run records which can include run metrics and output artifacts from your experiments."
+    "**Experiment** is a logical container in an Azure ML Workspace. It hosts run records which can include run metrics \n",
+    "and output artifacts from your experiments."
    ]
   },
   {
@@ -135,7 +139,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note `create_model.py` also references a `item_selector.py` and `label_rank.py` file. Let's check those scripts as well."
+    "Note `create_model.py` also references a `item_selector.py` and `label_rank.py` file. Let's check those scripts \n",
+    "as well."
    ]
   },
   {
@@ -169,7 +174,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we show three different ways of locally training your model through Azure ML SDK for demonstration purposes. Only one of these runs is sufficient to register the model."
+    "In this section, we show three different ways of locally training your model through Azure ML SDK for demonstration \n",
+    "purposes. Only one of these runs is sufficient to register the model."
    ]
   },
   {
@@ -178,7 +184,9 @@
    "source": [
     "\n",
     "### User-managed environment\n",
-    "Below, we use a user-managed run, which means you are responsible to ensure all the necessary packages that are available in the Python environment you choose to run the script. We will use the environment created for this tutorial which has Azure ML SDK and other dependencies installed."
+    "Below, we use a user-managed run, which means you are responsible to ensure all the necessary packages that are \n",
+    "available in the Python environment you choose to run the script. We will use the environment created for this \n",
+    "tutorial which has Azure ML SDK and other dependencies installed."
    ]
   },
   {
@@ -203,7 +211,9 @@
    "metadata": {},
    "source": [
     "#### Submit script to run in the user-managed environment\n",
-    "Note that the whole `scripts` folder is submitted for execution, including the `item_selector.py` and `label_rank.py` files. The model will be written to `outputs` directory which is a special directory such that all content in this directory is automatically uploaded to your workspace. "
+    "Note that the whole `scripts` folder is submitted for execution, including the `item_selector.py` and `label_rank.py` \n",
+    "files. The model will be written to `outputs` directory which is a special directory such that all content in this \n",
+    "directory is automatically uploaded to your workspace. "
    ]
   },
   {
@@ -322,7 +332,8 @@
    },
    "source": [
     "### System-managed environment\n",
-    "You can also ask the system to build a new conda environment and execute your scripts in it. The environment is built once and will be reused in subsequent executions as long as the conda dependencies remain unchanged. "
+    "You can also ask the system to build a new conda environment and execute your scripts in it. The environment is built \n",
+    "once and will be reused in subsequent executions as long as the conda dependencies remain unchanged. "
    ]
   },
   {
@@ -385,7 +396,9 @@
    },
    "source": [
     "#### Submit script to run in the system-managed environment\n",
-    "A new conda environment is built based on the conda dependencies object. If you are running this for the first time,  this might take up to 5 minutes. But this conda environment is reused so long as you don't change the conda dependencies."
+    "A new conda environment is built based on the conda dependencies object. If you are running this for the first time,  \n",
+    "this might take up to 5 minutes. But this conda environment is reused so long as you don't change the conda \n",
+    "dependencies."
    ]
   },
   {
@@ -483,9 +496,11 @@
    },
    "source": [
     "### Docker-based execution\n",
-    "**IMPORTANT**: You must have Docker engine installed locally in order to use this execution mode. If your kernel is already running in a Docker container, such as **Azure Notebooks**, this mode will **NOT** work.\n",
+    "**IMPORTANT**: You must have Docker engine installed locally in order to use this execution mode. If your kernel is \n",
+    "already running in a Docker container, such as **Azure Notebooks**, this mode will **NOT** work.\n",
     "\n",
-    "You can also ask the system to pull down a Docker image and execute your scripts in it. We will use the `continuumio/miniconda3` image for that purpose."
+    "You can also ask the system to pull down a Docker image and execute your scripts in it. We will use the \n",
+    "`continuumio/miniconda3` image for that purpose."
    ]
   },
   {
@@ -517,7 +532,8 @@
     }
    },
    "source": [
-    "Here, we map the local `data_folder` that includes the training and testing data to the docker container using `-v` flag."
+    "Here, we map the local `data_folder` that includes the training and testing data to the docker container using `-v` \n",
+    "flag."
    ]
   },
   {
