--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -20,7 +20,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will develop the scoring script and test it locally. We will use the scoring script to create the web service that will call the model for scoring."
+    "In this notebook, we will develop the scoring script and test it locally. We will use the scoring script to create the \n",
+    "web service that will call the model for scoring."
    ]
   },
   {
@@ -112,7 +113,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use the writefile magic to write the contents of the below cell to `score.py` which includes the  `init` and `run` functions required by AML.\n",
+    "We use the writefile magic to write the contents of the below cell to `score.py` which includes the  `init` and `run` \n",
+    "functions required by AML.\n",
     "- The init() function typically loads the model into a global object.\n",
     "- The run(input_data) function uses the model to predict a value based on the input_data."
    ]
