--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -45,7 +45,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the values in the following cell with your information."
+    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
+    "values in the following cell with your information."
    ]
   },
   {
@@ -99,7 +100,8 @@
    "metadata": {},
    "source": [
     "## Create an image\n",
-    "We will now modify the `score.py` created in the previous notebook for the `init()` function to use the model we registered to the workspace earlier."
+    "We will now modify the `score.py` created in the previous notebook for the `init()` function to use the model we \n",
+    "registered to the workspace earlier."
    ]
   },
   {
@@ -323,7 +325,9 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "We have created a docker Image using AzureML and registred this image on Azure Container Registry (ACR). This docker image encapsulates a trained machine learning model and scoring scripts. In the next step, we can take this image and deploy it on the compute target of your choice: Azure Kubernetes Service (AKS) Cluster or Azure IoT Edge."
+    "We have created a docker Image using AzureML and registred this image on Azure Container Registry (ACR). This docker \n",
+    "image encapsulates a trained machine learning model and scoring scripts. In the next step, we can take this image \n",
+    "and deploy it on the compute target of your choice: Azure Kubernetes Service (AKS) Cluster or Azure IoT Edge."
    ]
   }
  ],
