--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -55,7 +55,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the values in the following cell with your information."
+    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
+    "values in the following cell with your information."
    ]
   },
   {
@@ -142,7 +143,9 @@
    "metadata": {},
    "source": [
     "## Provision the AKS Cluster\n",
-    "This is a one time setup. You can reuse this cluster for multiple deployments after it has been created. If you delete the cluster or the resource group that contains it, then you would have to recreate it. Let's first check if there are enough cores in the subscription for the cluster ."
+    "This is a one time setup. You can reuse this cluster for multiple deployments after it has been created. If you delete \n",
+    "the cluster or the resource group that contains it, then you would have to recreate it. Let's first check if there are \n",
+    "enough cores in the subscription for the cluster ."
    ]
   },
   {
@@ -404,7 +407,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try a few more duplicate questions and display their top 3 original matches. Let's first get the scoring URL and and API key for the web service."
+    "Let's try a few more duplicate questions and display their top 3 original matches. Let's first get the scoring URL \n",
+    "and API key for the web service."
    ]
   },
   {
@@ -541,7 +545,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this part, we scale the number of pods to make sure we fully utilize the AKS cluster. To connect to the Kubernetes cluster, we will use kubectl, the Kubernetes command-line client. To install, run the following:"
+    "In this part, we scale the number of pods to make sure we fully utilize the AKS cluster. To connect to the Kubernetes \n",
+    "cluster, we will use kubectl, the Kubernetes command-line client. To install, run the following:"
    ]
   },
   {
@@ -657,7 +662,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl scale --current-replicas=$num_replicas --replicas=$new_num_replicas {\"deployments/\" + aks_service_name} --namespace azureml-workspace"
+    "!kubectl scale --current-replicas=$num_replicas \\\n",
+    "    --replicas=$new_num_replicas {\"deployments/\" + aks_service_name} \\\n",
+    "    --namespace azureml-workspace"
    ]
   },
   {
