--- a/notebooks/06_SpeedTestWebApp.ipynb
+++ b/notebooks/06_SpeedTestWebApp.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook pulls some images and tests them against the deployed web application. We submit requests asychronously which should reduce the contribution of latency."
+    "This notebook pulls some images and tests them against the deployed web application. We submit requests asychronously \n",
+    "which should reduce the contribution of latency."
    ]
   },
   {
@@ -69,7 +70,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will test our service concurrently but only have 4 concurrent requests at any time. We have only deployed one pod on one node and increasing the number of concurrent calls does not really increase throughput. Feel free to try different values and see how the service responds."
+    "We will test our service concurrently but only have 4 concurrent requests at any time. We have only deployed one pod \n",
+    "on one node and increasing the number of concurrent calls does not really increase throughput. Feel free to try \n",
+    "different values and see how the service responds."
    ]
   },
   {
@@ -106,7 +109,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below we are going to use [Locust](https://locust.io/) to load test our deployed model. First we need to write the locustfile."
+    "Below we are going to use [Locust](https://locust.io/) to load test our deployed model. First we need to write the \n",
+    "locustfile."
    ]
   },
   {
@@ -164,7 +168,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below we define the locust command we want to run. We are going to run at a hatch rate of 10 and the whole test will last 1 minute. Feel free to adjust the parameters below and see how the results differ. The results of the test will be saved to two csv files **modeltest_requests.csv** and **modeltest_distribution.csv**"
+    "Below we define the locust command we want to run. We are going to run at a hatch rate of 10 and the whole test will \n",
+    "last 1 minute. Feel free to adjust the parameters below and see how the results differ. The results of the test will \n",
+    "be saved to two csv files **modeltest_requests.csv** and **modeltest_distribution.csv**"
    ]
   },
   {
