--- a/notebooks/07_RealTimeScoring.ipynb
+++ b/notebooks/07_RealTimeScoring.ipynb
@@ -204,7 +204,8 @@
     }
    },
    "source": [
-    "A constructor function for the duplicates and questions explorer widget. This builds a box containing duplicates and question tabs, each in turn containing boxes that contain the buttons and text areas."
+    "A constructor function for the duplicates and questions explorer widget. This builds a box containing duplicates and \n",
+    "question tabs, each in turn containing boxes that contain the buttons and text areas."
    ]
   },
   {
@@ -278,7 +279,8 @@
     }
    },
    "source": [
-    "A handler function for a question passage button press. If the passage's text window is open, it is collapsed. Otherwise, it is opened."
+    "A handler function for a question passage button press. If the passage's text window is open, it is collapsed. \n",
+    "Otherwise, it is opened."
    ]
   },
   {
@@ -326,7 +328,9 @@
     }
    },
    "source": [
-    "A handler function for a duplicate obligation button press. If the obligation is not selected, select it and update the questions tab with its top 15 question passages ordered by match score. Otherwise, if the duplicate's text window is open, it is collapsed, else it is opened."
+    "A handler function for a duplicate obligation button press. If the obligation is not selected, select it and update \n",
+    "the questions tab with its top 15 question passages ordered by match score. Otherwise, if the duplicate's text window \n",
+    "is open, it is collapsed, else it is opened."
    ]
   },
   {
@@ -661,7 +665,8 @@
     }
    },
    "source": [
-    "This builds the exploration widget as a box containing duplicates and question tabs, each in turn containing boxes that have for each ID-text pair a button and a text area."
+    "This builds the exploration widget as a box containing duplicates and question tabs, each in turn containing boxes \n",
+    "that have for each ID-text pair a button and a text area."
    ]
   },
   {
