--- a/notebooks/08_TearDown.ipynb
+++ b/notebooks/08_TearDown.ipynb
@@ -155,7 +155,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's delete the AKS compute from the workspace. Since we created the cluster through AML, the corresponding cloud based objects will also be deleted. If the custer was created externally and attached to the workspace, the below would raise an exception and nothing will be changed."
+    "Let's delete the AKS compute from the workspace. Since we created the cluster through AML, the corresponding cloud \n",
+    "based objects will also be deleted. If the custer was created externally and attached to the workspace, the below \n",
+    "would raise an exception and nothing will be changed."
    ]
   },
   {
