--- a/notebooks/01_DataPrep.ipynb
+++ b/notebooks/01_DataPrep.ipynb
@@ -21,9 +21,9 @@
    "metadata": {},
    "source": [
     "In this notebook, we use a subset of [Stack Exchange network](https://archive.org/details/stackexchange) question data \n",
-    "which includes original questions tagged as 'JavaScript', their duplicate questions and their answers. Here, we provide \n",
-    "the steps to prepare the data to use in model development for training a model that will match a new question with an \n",
-    "existing original question. "
+    "which includes original questions tagged as 'JavaScript', their duplicate questions and their answers. Here, we \n",
+    "provide the steps to prepare the data to use in model development for training a model that will match a new \n",
+    "question with an existing original question. "
    ]
   },
   {
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "questions.iloc[0,1]"
+    "print(questions.iloc[0, 1])"
    ]
   },
   {
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dupes[dupes.AnswerId == questions.iloc[0, 0]]"
+    "print(dupes[dupes.AnswerId == questions.iloc[0, 0]])"
    ]
   },
   {
@@ -190,8 +190,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we use the helper functions to clean questions, duplicates and answers from unwanted text such as code, html tags \n",
-    "and links. Notice that we add a new column 'Text' to each dataframe for clean text in lowercase."
+    "Next, we use the helper functions to clean questions, duplicates and answers from unwanted text such as code, html \n",
+    "tags and links. Notice that we add a new column 'Text' to each dataframe for clean text in lowercase."
    ]
   },
   {
@@ -506,8 +506,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we pair each training duplicate in train set with its matching question and N-1 random questions using the helper \n",
-    "function."
+    "Next, we pair each training duplicate in train set with its matching question and N-1 random questions using the \n",
+    "helper function."
    ]
   },
   {
