--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -296,7 +296,7 @@
    "source": [
     "dupes_test_path = './data_folder/dupes_test.tsv'\n",
     "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
-    "text_to_score = dupes_test.iloc[0,4]\n",
+    "text_to_score = dupes_test.iloc[0, 4]\n",
     "text_to_score"
    ]
   },
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jsontext = text_to_json(text_to_score)"
+    "json_text = text_to_json(text_to_score)"
    ]
   },
   {
@@ -316,7 +316,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "image.run(input_data=jsontext)"
+    "image.run(input_data=json_text)"
    ]
   },
   {
