--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -415,20 +415,19 @@
     "    arguments=args,\n",
     "    run_config=run_config_system_managed,\n",
     ")\n",
-    "run = exp.submit(src)"
+    "run = exp.submit(src)\n",
+    "run"
    ],
    "execution_count": null,
    "outputs": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Get run history details"
+    "Block and wait till run finishes."
    ]
   },
   {
@@ -439,7 +438,7 @@
     }
    },
    "source": [
-    "run"
+    "run.wait_for_completion(show_output = True)"
    ],
    "execution_count": null,
    "outputs": []
@@ -451,25 +450,6 @@
      "name": "#%% md\n"
     }
    },
-   "source": [
-    "Block and wait till run finishes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "run.wait_for_completion(show_output = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "run.get_file_names()"
    ]
@@ -538,26 +518,20 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "host_dir = os.path.abspath(\"./data_folder\")\n",
     "container_dir = \"/data_folder\"\n",
     "docker_arg = \"{}:{}\".format(host_dir, container_dir)"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "This time the run will use the mapped `data_folder` inside the docker container to find the data files."
    ]
@@ -607,28 +581,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "run = exp.submit(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "run.wait_for_completion(show_output=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "run.get_file_names()"
    ],
    "metadata": {
     "collapsed": false,
@@ -642,7 +597,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "run.get_metrics()"
+    "run.wait_for_completion(show_output=True)"
    ],
    "metadata": {
     "collapsed": false,
