--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -179,8 +179,8 @@
    "source": [
     "dupes_test_path = './data_folder/dupes_test.tsv'\n",
     "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
-    "text_to_score = dupes_test.iloc[0,4]\n",
-    "text_to_score"
+    "text_to_score = dupes_test.iloc[0, 4]\n",
+    "print(text_to_score)"
    ]
   },
   {
